--- a/api/qsharp/microsoft.quantum.amplitudeamplification.ampampbyoraclephases.yml
+++ b/api/qsharp/microsoft.quantum.amplitudeamplification.ampampbyoraclephases.yml
@@ -2,7 +2,7 @@
 uid: microsoft.quantum.amplitudeamplification.ampampbyoraclephases
 name: AmpAmpByOraclePhases
 type: function
-namespace: Microsoft.Quantum.AmplitudeAmplification
+namespace: microsoft.quantum.amplitudeamplification
 summary: AmpAmpByOraclePhases 已被弃用。 请改用 @"microsoft.quantum.amplitudeamplification.amplitudeamplificationfromstatepreparation"。
 syntax: 'function AmpAmpByOraclePhases (phases : Microsoft.Quantum.AmplitudeAmplification.ReflectionPhases, stateOracle : Microsoft.Quantum.Oracles.StateOracle, idxFlagQubit : Int) : (Qubit[] => Unit is Adj + Ctl)'
 input:
@@ -32,9 +32,9 @@ output:
     - Adjoint
     - Controlled
 metadata:
-  ms.openlocfilehash: 2db5fbc763104372f1931216425db1d3ac591509
-  ms.sourcegitcommit: db23885adb7ff76cbf8bd1160d401a4f0471e549
+  ms.openlocfilehash: 7dc85cccb5bb450a6de244a56a9e98a40f3b8066
+  ms.sourcegitcommit: d6ac6f4345be0dd68f1bcd944f44b08e7a3cf346
   ms.translationtype: MT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 05/01/2020
-  ms.locfileid: "82675426"
+  ms.lasthandoff: 09/02/2020
+  ms.locfileid: "89340606"
