--- a/api/qsharp/microsoft.quantum.amplitudeamplification.applyamplitudeamplification.yml
+++ b/api/qsharp/microsoft.quantum.amplitudeamplification.applyamplitudeamplification.yml
@@ -2,7 +2,7 @@
 uid: microsoft.quantum.amplitudeamplification.applyamplitudeamplification
 name: ApplyAmplitudeAmplification
 type: operation
-namespace: Microsoft.Quantum.AmplitudeAmplification
+namespace: microsoft.quantum.amplitudeamplification
 summary: 在给定寄存器上应用振幅放大，使用一组给定的阶段和 oracles 来反映初始状态和最终状态。
 syntax: 'operation ApplyAmplitudeAmplification (phases : Microsoft.Quantum.AmplitudeAmplification.ReflectionPhases, startStateReflection : Microsoft.Quantum.Oracles.ReflectionOracle, targetStateReflection : Microsoft.Quantum.Oracles.ReflectionOracle, target : Qubit[]) : Unit'
 input:
@@ -31,9 +31,9 @@ functors:
 - Adjoint
 - Controlled
 metadata:
-  ms.openlocfilehash: d9381587b10f24411e9b712559e15345784e36e1
-  ms.sourcegitcommit: db23885adb7ff76cbf8bd1160d401a4f0471e549
+  ms.openlocfilehash: 1c7069bf0e404ce043c242e9f546904b642b8bb0
+  ms.sourcegitcommit: d6ac6f4345be0dd68f1bcd944f44b08e7a3cf346
   ms.translationtype: MT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 05/01/2020
-  ms.locfileid: "82672974"
+  ms.lasthandoff: 09/02/2020
+  ms.locfileid: "89340589"
