--- a/api/qsharp/microsoft.quantum.amplitudeamplification.reflectionphases.yml
+++ b/api/qsharp/microsoft.quantum.amplitudeamplification.reflectionphases.yml
@@ -2,7 +2,7 @@
 uid: microsoft.quantum.amplitudeamplification.reflectionphases
 name: ReflectionPhases
 type: newtype
-namespace: Microsoft.Quantum.AmplitudeAmplification
+namespace: microsoft.quantum.amplitudeamplification
 summary: 振幅放大中部分反射序列的阶段。
 remarks: >-
   第一个参数是有关开始状态的反射的一组阶段。 第二个参数是有关目标状态的反射的一组阶段。
@@ -10,9 +10,9 @@ remarks: >-
   这两个数组的长度必须相等。 请注意，在许多情况下，有关目标状态的开始状态和最后一阶段的第一阶段会引入全局阶段转换，并可能设置为 $0 $。
 syntax: newtype ReflectionPhases = (Double[], Double[]);
 metadata:
-  ms.openlocfilehash: 84d2c006997f8a2a3c9b121581b5dd58804a806d
-  ms.sourcegitcommit: db23885adb7ff76cbf8bd1160d401a4f0471e549
+  ms.openlocfilehash: 4a0ed1c01dc6cd14d2569064d769d7057087db48
+  ms.sourcegitcommit: d6ac6f4345be0dd68f1bcd944f44b08e7a3cf346
   ms.translationtype: MT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 05/01/2020
-  ms.locfileid: "82680112"
+  ms.lasthandoff: 09/02/2020
+  ms.locfileid: "89340351"
