--- a/api/qsharp/microsoft.quantum.errorcorrection.recovercss.yml
+++ b/api/qsharp/microsoft.quantum.errorcorrection.recovercss.yml
@@ -2,20 +2,20 @@
 uid: microsoft.quantum.errorcorrection.recovercss
 name: RecoverCSS
 type: operation
-namespace: Microsoft.Quantum.ErrorCorrection
-summary: 按`CSS`类型描述的量程代码执行一轮错误更正。
+namespace: microsoft.quantum.errorcorrection
+summary: 按类型描述的量程代码执行一轮错误更正 `CSS` 。
 syntax: 'operation RecoverCSS (code : Microsoft.Quantum.ErrorCorrection.CSS, fnX : Microsoft.Quantum.ErrorCorrection.RecoveryFn, fnZ : Microsoft.Quantum.ErrorCorrection.RecoveryFn, logicalRegister : Microsoft.Quantum.ErrorCorrection.LogicalRegister) : Unit'
 input:
   content: '(code : Microsoft.Quantum.ErrorCorrection.CSS, fnX : Microsoft.Quantum.ErrorCorrection.RecoveryFn, fnZ : Microsoft.Quantum.ErrorCorrection.RecoveryFn, logicalRegister : Microsoft.Quantum.ErrorCorrection.LogicalRegister)'
   types:
   - name: code
-    summary: 封装为`CSS`类型的量程 CSS 错误更正代码描述了量程数据的编码和解码，以及如何测量 syndromes 错误。
+    summary: 封装为类型的量程 CSS 错误更正代码 `CSS` 描述了量程数据的编码和解码，以及如何测量 syndromes 错误。
     uid: microsoft.quantum.errorcorrection.css
   - name: fnX
-    summary: 一个`RecoveryFn` ，它将每个 $X $ 错误症状`Pauli[]`映射到更正检测到的错误的操作。
+    summary: 一个 `RecoveryFn` ，它将每个 $X $ 错误症状映射到 `Pauli[]` 更正检测到的错误的操作。
     uid: microsoft.quantum.errorcorrection.recoveryfn
   - name: fnZ
-    summary: 一个`RecoveryFn` ，它将每个 $Z $ 错误症状`Pauli[]`映射到更正检测到的错误的操作。
+    summary: 一个 `RecoveryFn` ，它将每个 $Z $ 错误症状映射到 `Pauli[]` 更正检测到的错误的操作。
     uid: microsoft.quantum.errorcorrection.recoveryfn
   - name: logicalRegister
     summary: 定义了稳定程序代码的 qubits 的数组。
@@ -30,9 +30,9 @@ seeAlso:
 - microsoft.quantum.canon.recoveryfn
 - microsoft.quantum.canon.logicalregister
 metadata:
-  ms.openlocfilehash: 8c9504e985b224421d3eb66b0d7e9bc0ef8f2e96
-  ms.sourcegitcommit: db23885adb7ff76cbf8bd1160d401a4f0471e549
+  ms.openlocfilehash: cb3a6bf49913b340545e3659f078adc244356246
+  ms.sourcegitcommit: d6ac6f4345be0dd68f1bcd944f44b08e7a3cf346
   ms.translationtype: MT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 05/01/2020
-  ms.locfileid: "82682267"
+  ms.lasthandoff: 09/02/2020
+  ms.locfileid: "89349888"
