--- a/api/qsharp/microsoft.quantum.errorcorrection.tablelookuprecovery.yml
+++ b/api/qsharp/microsoft.quantum.errorcorrection.tablelookuprecovery.yml
@@ -2,8 +2,8 @@
 uid: microsoft.quantum.errorcorrection.tablelookuprecovery
 name: TableLookupRecovery
 type: function
-namespace: Microsoft.Quantum.ErrorCorrection
-summary: 对于给定的 qubits 寄存器上的 Pauli 操作表，此函数返回一个类型`RecoveryFn`为的对象，该对象包含对给定的 Pauli 操作数组执行表查找解码所需的所有信息。
+namespace: microsoft.quantum.errorcorrection
+summary: 对于给定的 qubits 寄存器上的 Pauli 操作表，此函数返回一个类型为的对象，该对象 `RecoveryFn` 包含对给定的 Pauli 操作数组执行表查找解码所需的所有信息。
 syntax: 'function TableLookupRecovery (table : Pauli[][]) : Microsoft.Quantum.ErrorCorrection.RecoveryFn'
 input:
   content: '(table : Pauli[][])'
@@ -18,12 +18,12 @@ input:
 output:
   content: Microsoft.Quantum.ErrorCorrection.RecoveryFn
   types:
-  - summary: 类型`RecoveryFn`为的对象，即，与给定症状`Syndrome -> Pauli[]`数组关联的映射对应 Pauli 更正操作。
+  - summary: 类型为的对象 `RecoveryFn` ，即， `Syndrome -> Pauli[]` 与给定症状数组关联的映射对应 Pauli 更正操作。
     uid: microsoft.quantum.errorcorrection.recoveryfn
 metadata:
-  ms.openlocfilehash: 20400c4afb1819225192ea695e4cc525e0b2f22b
-  ms.sourcegitcommit: db23885adb7ff76cbf8bd1160d401a4f0471e549
+  ms.openlocfilehash: 25f9fbf5890c28d52552ba7fdc89ab6bb1506f37
+  ms.sourcegitcommit: d6ac6f4345be0dd68f1bcd944f44b08e7a3cf346
   ms.translationtype: MT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 05/01/2020
-  ms.locfileid: "82684809"
+  ms.lasthandoff: 09/02/2020
+  ms.locfileid: "89349599"
