--- a/api/qsharp/microsoft.quantum.extensions.bitwise.or.yml
+++ b/api/qsharp/microsoft.quantum.extensions.bitwise.or.yml
@@ -2,7 +2,7 @@
 uid: microsoft.quantum.extensions.bitwise.or
 name: Or
 type: function
-namespace: Microsoft.Quantum.Extensions.Bitwise
+namespace: microsoft.quantum.extensions.bitwise
 summary: 或已弃用。 请改用 @"microsoft.quantum.bitwise.or"。
 syntax: 'function Or (a : Int, b : Int) : Int'
 input:
@@ -20,9 +20,9 @@ output:
   - isPrimitive: true
     uid: Int
 metadata:
-  ms.openlocfilehash: 6bd8c510bee24f84c62b6f199a19360495b4b5cb
-  ms.sourcegitcommit: db23885adb7ff76cbf8bd1160d401a4f0471e549
+  ms.openlocfilehash: d97283ccdfb2e8cab6a93f4af99459e829b22e6e
+  ms.sourcegitcommit: d6ac6f4345be0dd68f1bcd944f44b08e7a3cf346
   ms.translationtype: MT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 05/01/2020
-  ms.locfileid: "82682214"
+  ms.lasthandoff: 09/02/2020
+  ms.locfileid: "89349429"
