--- a/api/qsharp/microsoft.quantum.canon.applytopartitionc.yml
+++ b/api/qsharp/microsoft.quantum.canon.applytopartitionc.yml
@@ -2,11 +2,11 @@
 uid: microsoft.quantum.canon.applytopartitionc
 name: ApplyToPartitionC
 type: operation
-namespace: Microsoft.Quantum.Canon
+namespace: microsoft.quantum.canon
 summary: >-
   将一对操作应用于寄存器的给定分区分为两部分。
 
-  修饰符`C`指示操作可控制。
+  修饰符 `C` 指示操作可控制。
 syntax: 'operation ApplyToPartitionC (op : ((Qubit[], Qubit[]) => Unit is Ctl), numberOfQubitsToFirstArgument : Int, target : Qubit[]) : Unit'
 input:
   content: '(op : ((Qubit[], Qubit[]) => Unit is Ctl), numberOfQubitsToFirstArgument : Int, target : Qubit[])'
@@ -50,9 +50,9 @@ functors:
 seeAlso:
 - microsoft.quantum.canon.applytopartition
 metadata:
-  ms.openlocfilehash: e53e8bfc9320760fab7bfa0204892eeef331c804
-  ms.sourcegitcommit: db23885adb7ff76cbf8bd1160d401a4f0471e549
+  ms.openlocfilehash: e52201676a9c424556a3d11d85ed873344b48830
+  ms.sourcegitcommit: d6ac6f4345be0dd68f1bcd944f44b08e7a3cf346
   ms.translationtype: MT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 05/01/2020
-  ms.locfileid: "82674608"
+  ms.lasthandoff: 09/02/2020
+  ms.locfileid: "89357317"
