--- a/api/qsharp/microsoft.quantum.canon.applytopartitionca.yml
+++ b/api/qsharp/microsoft.quantum.canon.applytopartitionca.yml
@@ -2,11 +2,11 @@
 uid: microsoft.quantum.canon.applytopartitionca
 name: ApplyToPartitionCA
 type: operation
-namespace: Microsoft.Quantum.Canon
+namespace: microsoft.quantum.canon
 summary: >-
   将一对操作应用于寄存器的给定分区分为两部分。
 
-  修饰符`CA`指示该操作是可控制的且 adjointable。
+  修饰符 `CA` 指示该操作是可控制的且 adjointable。
 syntax: 'operation ApplyToPartitionCA (op : ((Qubit[], Qubit[]) => Unit is Ctl + Adj), numberOfQubitsToFirstArgument : Int, target : Qubit[]) : Unit'
 input:
   content: '(op : ((Qubit[], Qubit[]) => Unit is Ctl + Adj), numberOfQubitsToFirstArgument : Int, target : Qubit[])'
@@ -52,9 +52,9 @@ functors:
 seeAlso:
 - microsoft.quantum.canon.applytopartition
 metadata:
-  ms.openlocfilehash: 940269f33bbeeddb52d19103f42ec8ebf6508757
-  ms.sourcegitcommit: db23885adb7ff76cbf8bd1160d401a4f0471e549
+  ms.openlocfilehash: 0fef201b3117ef695f3ce6379f61cea61bb6ac44
+  ms.sourcegitcommit: d6ac6f4345be0dd68f1bcd944f44b08e7a3cf346
   ms.translationtype: MT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 05/01/2020
-  ms.locfileid: "82674580"
+  ms.lasthandoff: 09/02/2020
+  ms.locfileid: "89357300"
