--- a/api/qsharp/microsoft.quantum.canon.applytosubregister.yml
+++ b/api/qsharp/microsoft.quantum.canon.applytosubregister.yml
@@ -2,10 +2,10 @@
 uid: microsoft.quantum.canon.applytosubregister
 name: ApplyToSubregister
 type: operation
-namespace: Microsoft.Quantum.Canon
+namespace: microsoft.quantum.canon
 summary: 将操作应用于寄存器的 subregister，其 qubits 由其索引数组指定。
 examples: >-
-  Create 三个 qubit state ${1}\frac {{2}\sqrt}{0}\_\ket 2 （{0}\_\ket 1 \{0}票证 _3 +{1}\_\ket 1 \{1}票证 _3） $：
+  Create 三个 qubit state $ \frac {1} {\sqrt {2} } \ket {0} \_ 2 ( \ket {0} \_ 1 \ 票证 {0} _3 + \ket {1} \_ 1 \ 票证 {1} _3) $：
 
 
   ```qsharp
@@ -49,9 +49,9 @@ seeAlso:
 - applytosubregisterc
 - applytosubregisterca
 metadata:
-  ms.openlocfilehash: 89c488fd593e6f81a1c811e0b507a69a9f891be9
-  ms.sourcegitcommit: db23885adb7ff76cbf8bd1160d401a4f0471e549
+  ms.openlocfilehash: 00e62624cf1bfc9460316a03c02770fb585df3ba
+  ms.sourcegitcommit: d6ac6f4345be0dd68f1bcd944f44b08e7a3cf346
   ms.translationtype: MT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 05/01/2020
-  ms.locfileid: "82674569"
+  ms.lasthandoff: 09/02/2020
+  ms.locfileid: "89357283"
