--- a/api/qsharp/microsoft.quantum.canon.applytosubregisterc.yml
+++ b/api/qsharp/microsoft.quantum.canon.applytosubregisterc.yml
@@ -2,11 +2,11 @@
 uid: microsoft.quantum.canon.applytosubregisterc
 name: ApplyToSubregisterC
 type: operation
-namespace: Microsoft.Quantum.Canon
+namespace: microsoft.quantum.canon
 summary: >-
   将操作应用于寄存器的 subregister，其 qubits 由其索引数组指定。
 
-  修饰符`C`指示操作可控制。
+  修饰符 `C` 指示操作可控制。
 syntax: 'operation ApplyToSubregisterC (op : (Qubit[] => Unit is Ctl), idxs : Int[], target : Qubit[]) : Unit'
 input:
   content: '(op : (Qubit[] => Unit is Ctl), idxs : Int[], target : Qubit[])'
@@ -45,9 +45,9 @@ functors:
 seeAlso:
 - microsoft.quantum.canon.applytosubregister
 metadata:
-  ms.openlocfilehash: 8fa221658eb4cd8d155ccc4c08ca31a7a335c480
-  ms.sourcegitcommit: db23885adb7ff76cbf8bd1160d401a4f0471e549
+  ms.openlocfilehash: 6cd39986779ca282207d66214e5cfa8eaf9fa90f
+  ms.sourcegitcommit: d6ac6f4345be0dd68f1bcd944f44b08e7a3cf346
   ms.translationtype: MT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 05/01/2020
-  ms.locfileid: "82674537"
+  ms.lasthandoff: 09/02/2020
+  ms.locfileid: "89357249"
