--- a/api/qsharp/microsoft.quantum.canon.applytosubregisterca.yml
+++ b/api/qsharp/microsoft.quantum.canon.applytosubregisterca.yml
@@ -2,11 +2,11 @@
 uid: microsoft.quantum.canon.applytosubregisterca
 name: ApplyToSubregisterCA
 type: operation
-namespace: Microsoft.Quantum.Canon
+namespace: microsoft.quantum.canon
 summary: >-
   将操作应用于寄存器的 subregister，其 qubits 由其索引数组指定。
 
-  修饰符`CA`指示该操作是可控制的且 adjointable。
+  修饰符 `CA` 指示该操作是可控制的且 adjointable。
 syntax: 'operation ApplyToSubregisterCA (op : (Qubit[] => Unit is Ctl + Adj), idxs : Int[], target : Qubit[]) : Unit'
 input:
   content: '(op : (Qubit[] => Unit is Ctl + Adj), idxs : Int[], target : Qubit[])'
@@ -47,9 +47,9 @@ functors:
 seeAlso:
 - microsoft.quantum.canon.applytosubregister
 metadata:
-  ms.openlocfilehash: 1485fbd3d4b8ba5ba85736d7903aa7e42d36c20f
-  ms.sourcegitcommit: db23885adb7ff76cbf8bd1160d401a4f0471e549
+  ms.openlocfilehash: 65bb27a8993009febeee275cf3ea117dafc46028
+  ms.sourcegitcommit: d6ac6f4345be0dd68f1bcd944f44b08e7a3cf346
   ms.translationtype: MT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 05/01/2020
-  ms.locfileid: "82680389"
+  ms.lasthandoff: 09/02/2020
+  ms.locfileid: "89357215"
