--- a/api/qsharp/microsoft.quantum.canon.applywitha.yml
+++ b/api/qsharp/microsoft.quantum.canon.applywitha.yml
@@ -2,7 +2,7 @@
 uid: microsoft.quantum.canon.applywitha
 name: ApplyWithA
 type: operation
-namespace: Microsoft.Quantum.Canon
+namespace: microsoft.quantum.canon
 summary: >-
   给定两个操作，将一个操作应用到另一个运算。
 
@@ -58,9 +58,9 @@ seeAlso:
 - applywithc
 - applywithca
 metadata:
-  ms.openlocfilehash: 6852c035d778bd29da74008f13be13dff78138c0
-  ms.sourcegitcommit: db23885adb7ff76cbf8bd1160d401a4f0471e549
+  ms.openlocfilehash: 56776a0211977993f8d56b96db3c1cc5fd80d49d
+  ms.sourcegitcommit: d6ac6f4345be0dd68f1bcd944f44b08e7a3cf346
   ms.translationtype: MT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 05/01/2020
-  ms.locfileid: "82674488"
+  ms.lasthandoff: 09/02/2020
+  ms.locfileid: "89357198"
