--- a/api/qsharp/microsoft.quantum.errorcorrection.steanecoderecoveryfns.yml
+++ b/api/qsharp/microsoft.quantum.errorcorrection.steanecoderecoveryfns.yml
@@ -2,7 +2,7 @@
 uid: microsoft.quantum.errorcorrection.steanecoderecoveryfns
 name: SteaneCodeRecoveryFns
 type: function
-namespace: Microsoft.Quantum.ErrorCorrection
+namespace: microsoft.quantum.errorcorrection
 summary: ⟦7，1，3⟧ Steane 量程代码的稳定 X 和 Z 部分的解码器。
 syntax: 'function SteaneCodeRecoveryFns () : (Microsoft.Quantum.ErrorCorrection.RecoveryFn, Microsoft.Quantum.ErrorCorrection.RecoveryFn)'
 input:
@@ -11,7 +11,7 @@ input:
 output:
   content: (Microsoft.Quantum.ErrorCorrection.RecoveryFn, Microsoft.Quantum.ErrorCorrection.RecoveryFn)
   types:
-  - summary: 类型`RecoveryFn`为的函数的元组，它采用`Result[]`一个症状度量`Pauli[]` ，并返回纠正检测到的错误的操作。
+  - summary: 类型为的函数的元组 `RecoveryFn` ，它采用一个症状度量 `Result[]` ，并返回 `Pauli[]` 纠正检测到的错误的操作。
     types:
     - uid: microsoft.quantum.errorcorrection.recoveryfn
     - uid: microsoft.quantum.errorcorrection.recoveryfn
@@ -19,9 +19,9 @@ seeAlso:
 - steanecoderecoveryx
 - steanecoderecoveryz
 metadata:
-  ms.openlocfilehash: 15d089219fa733582a4663f3c95aa65f9b39cf68
-  ms.sourcegitcommit: db23885adb7ff76cbf8bd1160d401a4f0471e549
+  ms.openlocfilehash: 4f02341cfe3c23c57330f5165c8fe33f8854eb9d
+  ms.sourcegitcommit: d6ac6f4345be0dd68f1bcd944f44b08e7a3cf346
   ms.translationtype: MT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 05/01/2020
-  ms.locfileid: "82674227"
+  ms.lasthandoff: 09/02/2020
+  ms.locfileid: "89349786"
