--- a/api/qsharp/microsoft.quantum.errorcorrection.steanecoderecoveryx.yml
+++ b/api/qsharp/microsoft.quantum.errorcorrection.steanecoderecoveryx.yml
@@ -2,11 +2,11 @@
 uid: microsoft.quantum.errorcorrection.steanecoderecoveryx
 name: SteaneCodeRecoveryX
 type: function
-namespace: Microsoft.Quantum.ErrorCorrection
+namespace: microsoft.quantum.errorcorrection
 summary: ⟦7，1，3⟧ Steane 量程代码的稳定的 X 部分的解码器。
 remarks: 所选的解码器使用⟦7，1，3⟧ Steane 代码的 CSS 代码属性，即，它会单独更正 X 错误和 Z 错误。 此代码的一个属性是，X 的位置分别是 x 的分别是 X 的3位编码，这是 X 的3位编码，被视为整数。
 syntax: 'function SteaneCodeRecoveryX (syndrome : Microsoft.Quantum.ErrorCorrection.Syndrome) : Pauli[]'
-references: '- D. Gottesman、"稳定代码和量程错误纠正" 博士学位 Thesis，Caltech，1997;https://arxiv.org/abs/quant-ph/9705052'
+references: '- D. Gottesman、"稳定代码和量程错误纠正" 博士学位 Thesis，Caltech，1997; https://arxiv.org/abs/quant-ph/9705052'
 input:
   content: '(syndrome : Microsoft.Quantum.ErrorCorrection.Syndrome)'
   types:
@@ -16,7 +16,7 @@ input:
 output:
   content: Pauli[]
   types:
-  - summary: 一组 Pauli 操作，当应用于已编码的量程系统时，它会更正对应`syndrome`于的错误。
+  - summary: 一组 Pauli 操作，当应用于已编码的量程系统时，它会更正对应于的错误 `syndrome` 。
     isArray: true
     isPrimitive: true
     uid: Pauli
@@ -24,9 +24,9 @@ seeAlso:
 - steanecoderecoveryx
 - steanecoderecoveryfns
 metadata:
-  ms.openlocfilehash: 7b644842eb7ddfe9d44d5288ee5e34e097c00f7b
-  ms.sourcegitcommit: db23885adb7ff76cbf8bd1160d401a4f0471e549
+  ms.openlocfilehash: 90b748d2652791e85ad8e8559ece91baca2c4ffc
+  ms.sourcegitcommit: d6ac6f4345be0dd68f1bcd944f44b08e7a3cf346
   ms.translationtype: MT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 05/01/2020
-  ms.locfileid: "82682976"
+  ms.lasthandoff: 09/02/2020
+  ms.locfileid: "89349752"
