--- a/api/qsharp/microsoft.quantum.errorcorrection.steanecoderecoveryz.yml
+++ b/api/qsharp/microsoft.quantum.errorcorrection.steanecoderecoveryz.yml
@@ -2,7 +2,7 @@
 uid: microsoft.quantum.errorcorrection.steanecoderecoveryz
 name: SteaneCodeRecoveryZ
 type: function
-namespace: Microsoft.Quantum.ErrorCorrection
+namespace: microsoft.quantum.errorcorrection
 summary: ⟦7，1，3⟧ Steane 量程代码的 "稳定" 组 Z 部分的解码器。
 syntax: 'function SteaneCodeRecoveryZ (syndrome : Microsoft.Quantum.ErrorCorrection.Syndrome) : Pauli[]'
 input:
@@ -20,9 +20,9 @@ seeAlso:
 - steanecoderecoveryx
 - steanecoderecoveryfns
 metadata:
-  ms.openlocfilehash: 146163217fadec3b239b2662f6270c7067a5a412
-  ms.sourcegitcommit: db23885adb7ff76cbf8bd1160d401a4f0471e549
+  ms.openlocfilehash: 3409b4732d4db9777eff3ec50e2e0c2c0e0bc6e1
+  ms.sourcegitcommit: d6ac6f4345be0dd68f1bcd944f44b08e7a3cf346
   ms.translationtype: MT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 05/01/2020
-  ms.locfileid: "82684857"
+  ms.lasthandoff: 09/02/2020
+  ms.locfileid: "89349735"
