--- a/api/qsharp/microsoft.quantum.extensions.bitwise.zbits.yml
+++ b/api/qsharp/microsoft.quantum.extensions.bitwise.zbits.yml
@@ -2,7 +2,7 @@
 uid: microsoft.quantum.extensions.bitwise.zbits
 name: ZBits
 type: function
-namespace: Microsoft.Quantum.Extensions.Bitwise
+namespace: microsoft.quantum.extensions.bitwise
 summary: ZBits 已被弃用。 请改用 @"microsoft.quantum.bitwise.zbits"。
 syntax: 'function ZBits (paulies : Pauli[]) : Int'
 input:
@@ -18,9 +18,9 @@ output:
   - isPrimitive: true
     uid: Int
 metadata:
-  ms.openlocfilehash: a4be75eda8cf28f50301bb254f876ec3568f6366
-  ms.sourcegitcommit: db23885adb7ff76cbf8bd1160d401a4f0471e549
+  ms.openlocfilehash: b42589b0516fb0470cbb6d3d30ed605360aa2b94
+  ms.sourcegitcommit: d6ac6f4345be0dd68f1bcd944f44b08e7a3cf346
   ms.translationtype: MT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 05/01/2020
-  ms.locfileid: "82682135"
+  ms.lasthandoff: 09/02/2020
+  ms.locfileid: "89349327"
