--- a/api/qsharp/microsoft.quantum.preparation.preparechoistate.yml
+++ b/api/qsharp/microsoft.quantum.preparation.preparechoistate.yml
@@ -2,15 +2,15 @@
 uid: microsoft.quantum.preparation.preparechoistate
 name: PrepareChoiState
 type: operation
-namespace: Microsoft.Quantum.Preparation
+namespace: microsoft.quantum.preparation
 summary: 将给定操作的 Choi – Jamiłkowski 状态准备到给定的引用和目标寄存器。
-remarks: 量程进程的 Choi – Jamiłkowski 状态 $J （\Lambda） $ 定义为 $ $ \begin{align} J （\Lambda） \mathrel{： =} （\boldone \otimes \Lambda）（| \boldone\rangle\!\rangle\langle\!\langle\boldone |），\end{align} $ $ where $ |X\rangle\!\rangle $ 是列堆栈约定中的矩阵 $X $ 的*矢量化*。 了解此状态的传统说明会提供有关 $ \Lambda $ 对任意输入状态的影响的完整信息，并构成*量程进程 tomography*的基础。
+remarks: Choi – Jamiłkowski 状态 $J 量程进程的 ( \Lambda) $ 定义为 $ $ \begin{align} J ( \Lambda) \mathrel{： =} ( \boldone \otimes \Lambda)  (| \boldone\rangle \! \rangle\langle \! \langle\boldone |) ，\end{align} $ $ where $ |X\rangle \! \rangle $ 是列堆栈约定中的矩阵 $X $ 的 *矢量化* 。 了解此状态的传统说明会提供有关 $ \Lambda $ 对任意输入状态的影响的完整信息，并构成 *量程进程 tomography*的基础。
 syntax: 'operation PrepareChoiState (op : (Qubit[] => Unit), reference : Qubit[], target : Qubit[]) : Unit'
 input:
   content: '(op : (Qubit[] => Unit), reference : Qubit[], target : Qubit[])'
   types:
   - name: op
-    summary: 操作 $ \Lambda $，其 Choi – Jamiłkowski 状态 $J （\Lambda）/2 ^ N $ 准备好，其中 $N $ 是其`op`作用的 qubits 的数目。
+    summary: 操作 $ \Lambda $，其 Choi – Jamiłkowski 状态 $J ( \Lambda) /2 ^ N $ 准备好，其中 $N $ 是其作用的 qubits 的数目 `op` 。
     isOperation: true
     input:
       types:
@@ -22,12 +22,12 @@ input:
       - isPrimitive: true
         uid: Unit
   - name: reference
-    summary: 以 $ \ket{00\cdots 0} $ 状态开头的 qubits 的寄存器，将用作操作的`op`引用。
+    summary: 以 $ \ket{00\cdots 0} $ 状态开头的 qubits 的寄存器，将用作操作的引用 `op` 。
     isArray: true
     isPrimitive: true
     uid: Qubit
   - name: target
-    summary: 最初在 $ \ket{00\cdots 0} $ 状态的 qubits 的寄存器，将应用`op`该状态。
+    summary: 最初在 $ \ket{00\cdots 0} $ 状态的 qubits 的寄存器，将应用该状态 `op` 。
     isArray: true
     isPrimitive: true
     uid: Qubit
@@ -41,9 +41,9 @@ seeAlso:
 - preparechoistatec
 - preparechoistateca
 metadata:
-  ms.openlocfilehash: c23954131c9ef7c609089e3f58b3577151409993
-  ms.sourcegitcommit: db23885adb7ff76cbf8bd1160d401a4f0471e549
+  ms.openlocfilehash: c545443d583b55a60f4119ff1a266a290d34f4b9
+  ms.sourcegitcommit: d6ac6f4345be0dd68f1bcd944f44b08e7a3cf346
   ms.translationtype: MT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 05/01/2020
-  ms.locfileid: "82681176"
+  ms.lasthandoff: 09/02/2020
+  ms.locfileid: "89331562"
