--- a/api/qsharp/microsoft.quantum.preparation.prepareidentity.yml
+++ b/api/qsharp/microsoft.quantum.preparation.prepareidentity.yml
@@ -2,7 +2,7 @@
 uid: microsoft.quantum.preparation.prepareidentity
 name: PrepareIdentity
 type: operation
-namespace: Microsoft.Quantum.Preparation
+namespace: microsoft.quantum.preparation
 summary: >-
   在给定寄存器的情况下，准备在最大化 mixed 状态下进行注册。
 
@@ -25,9 +25,9 @@ output:
 seeAlso:
 - microsoft.quantum.canon.preparesinglequbitidentity
 metadata:
-  ms.openlocfilehash: d6ff10bb6251b96e7a6ba58d1afa1e4ab8eaab0a
-  ms.sourcegitcommit: db23885adb7ff76cbf8bd1160d401a4f0471e549
+  ms.openlocfilehash: f772dfd3fc71cb82243b2c45264eb3d01eaeb689
+  ms.sourcegitcommit: d6ac6f4345be0dd68f1bcd944f44b08e7a3cf346
   ms.translationtype: MT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 05/01/2020
-  ms.locfileid: "82673467"
+  ms.lasthandoff: 09/02/2020
+  ms.locfileid: "89331409"
